# natural-partition

./: Numeric-Natural-Partition.html  doc-index.html  doc-index.json  hie.yaml  index.html  natural-partition.cabal  natural-partition.haddock
.github/workflows/: build.yml
src/: Numeric.Natural.Partition.html
src/natural-partition-internal/Numeric/Natural/Partition/: Internal.hs
src/natural-partition-test/Numeric/Natural/: PartitionSpec.hs
src/natural-partition/Numeric/Natural/: Partition.hs
